--- a/plugins/duda/packages/sqlite/Makefile.in
+++ b/plugins/duda/packages/sqlite/Makefile.in
@@ -2,6 +2,7 @@ CC      = $CC
 CFLAGS  = $CFLAGS
 LDFLAGS = $LDFLAGS
 DEFS    = $DEFS
+DIRS    = sqlite_main
 INCDIR  = ../../../../src/include -I../../
 OBJECTS = duda_package.o sqlite.o
 SOURCES = duda_package.c sqlite.c
@@ -9,7 +10,8 @@ SOURCES = duda_package.c sqlite.c
 all: ../sqlite.dpkg
 
 ../sqlite.dpkg: $(OBJECTS)
-	$(CC) $(CFLAGS) $(LDFLAGS) $(DEFS) -shared -Wl -o $@ $^ -lc -lsqlite3
+	@(for d in $(DIRS); do $(MAKE) -C $$d ; done)
+	$(CC) $(CFLAGS) $(LDFLAGS) $(DEFS) -shared -Wl -o $@ $^ -lc
 
 .c.o: $(SOURCES)
 	$(CC) $(CFLAGS) $(DEFS) -I$(INCDIR) -fPIC -c $<
